added an image of real tofu inside a div with text

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -30,3 +30,9 @@
     border: 1px solid black;
     padding: 4px;
 }
+
+.product img{
+    width: auto;
+    height: 100px;
+    border-radius: 50px;
+}
